# algorithms-examples

./: Readme.md  binary_search.py  pyproject.toml
python/: Makefile  pyproject.toml
python/examples/: call_stack.py  case_default_exception.py  recursion.py
python/source/: binary_search_test.py  linear_search.py  lineral_search.py  linked_list.py  quicksort.py  selection_sort.py  stack.py  test_sort.py
python/tests/: test_call_stack.py  test_case_default_exception.py  test_linear_search.py  test_recursion.py  test_sort.py  test_stack.py
source/: binary_search.py  selection_sort.py  test_sort.py
