[tool.poetry]
name = "algorithms"
version = "0.1.0"
description = ""
authors = ["KonstantinSh <Kverde@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
autopep8 = "^1.7.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
